[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "cli-file-deduplicator"
version         = "1.1.0"
description     = "Fast, interactive CLI tool to find and remove duplicate files"
requires-python = ">=3.10"
license         = "MIT"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "send2trash>=1.8",
]

[project.scripts]
dedup = "dedup:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools]
packages = ["dedup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
